project(leetcode)

add_subdirectory(binsearch)

add_executable(0136 0136_single_number.cc)     # 简单题(异或)
add_executable(0137 0137_single_number_ii.cc)  # 中等题(异或)
add_executable(0260 0260_single_number_iii.cc) # 简单题(异或)

#0852. Peak Index in a Mountain Array
#1901. Find a Peak Element II
#2137. Pour Water Between Buckets to Make Water Levels Equal
#2210. Count Hills and Valleys in an Array